Fix status code mismatch
