# internal/models/error.go
@@ -1,0 +1,6 @@
+package models
+
+// ErrorResponse represents an error response
+type ErrorResponse struct {
+	Error string `json:"error" example:"Invalid input data"`
+}
